// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds field listeners 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "text",
        "optional": false,
        "label": "First",
        "field": Object {
          "label": "First",
          "name": "first",
        },
        "value": "firstValue",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "firstValue",
      },
    },
    "second": Immutable.Map {
      "initial": Immutable.Map {
        "type": "boolean",
        "optional": false,
        "label": "Second",
        "field": Object {
          "label": "Second",
          "name": "second",
          "type": "boolean",
        },
        "value": "secondValue",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "secondValue",
      },
    },
  },
  "listeners": Immutable.Map {
    "first": Immutable.List [
      [MockFunction],
    ],
    "second": Immutable.List [
      [MockFunction],
      [MockFunction],
    ],
  },
  "formTools": "form-tools",
}
`;

exports[`adds helperText from field config 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "text",
        "optional": false,
        "label": "First",
        "field": Object {
          "helperText": "i am helper",
          "label": "First",
          "name": "first",
        },
        "value": "firstValue",
      },
      "current": Immutable.Map {
        "helperText": "i am helper",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "firstValue",
      },
    },
    "second": Immutable.Map {
      "initial": Immutable.Map {
        "type": "boolean",
        "optional": false,
        "label": "Second",
        "field": Object {
          "label": "Second",
          "name": "second",
          "type": "boolean",
        },
        "value": "secondValue",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "secondValue",
      },
    },
  },
  "formTools": "form-tools",
}
`;

exports[`initialValues boolean 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "boolean",
        "optional": false,
        "label": undefined,
        "field": Object {
          "name": "first",
          "type": "boolean",
        },
        "value": false,
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": false,
      },
    },
  },
  "formTools": "form-tools",
}
`;

exports[`initialValues field.value should used if set 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "text",
        "optional": false,
        "label": undefined,
        "field": Object {
          "name": "first",
          "type": "text",
          "value": "i am field value",
        },
        "value": "i am field value",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "i am field value",
      },
    },
  },
  "formTools": "form-tools",
}
`;

exports[`initialValues list 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "list",
        "optional": false,
        "label": undefined,
        "field": Object {
          "name": "first",
          "type": "list",
        },
        "options": Object {},
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
      },
      "items": Immutable.List [],
    },
  },
  "formTools": "form-tools",
}
`;

exports[`initialValues number 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "number",
        "optional": false,
        "label": undefined,
        "field": Object {
          "name": "first",
          "type": "number",
        },
        "value": 0,
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": 0,
      },
    },
  },
  "formTools": "form-tools",
}
`;

exports[`initialValues select 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "select",
        "optional": false,
        "label": undefined,
        "field": Object {
          "name": "first",
          "type": "select",
        },
        "value": "",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "",
      },
    },
  },
  "formTools": "form-tools",
}
`;

exports[`initialValues text 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "text",
        "optional": false,
        "label": undefined,
        "field": Object {
          "name": "first",
          "type": "text",
        },
        "value": "",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "",
      },
    },
  },
  "formTools": "form-tools",
}
`;

exports[`prepares initialState by field 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "text",
        "optional": false,
        "label": "First",
        "field": Object {
          "label": "First",
          "name": "first",
        },
        "value": "firstValue",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "firstValue",
      },
    },
    "second": Immutable.Map {
      "initial": Immutable.Map {
        "type": "boolean",
        "optional": false,
        "label": "Second",
        "field": Object {
          "label": "Second",
          "name": "second",
          "type": "boolean",
        },
        "value": "secondValue",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "secondValue",
      },
    },
  },
  "formTools": "form-tools",
}
`;

exports[`reads initialValues that are nested 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "nested.first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "text",
        "optional": false,
        "label": "First",
        "field": Object {
          "label": "First",
          "name": "nested.first",
        },
        "value": "nestedValue",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "nestedValue",
      },
    },
  },
  "formTools": "form-tools",
}
`;

exports[`sets optional on field 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "text",
        "optional": true,
        "label": "First (optional)",
        "field": Object {
          "label": "First",
          "name": "first",
          "optional": true,
        },
        "value": "firstValue",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "firstValue",
      },
    },
    "second": Immutable.Map {
      "initial": Immutable.Map {
        "type": "boolean",
        "optional": false,
        "label": "Second",
        "field": Object {
          "label": "Second",
          "name": "second",
          "type": "boolean",
        },
        "value": "secondValue",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "secondValue",
      },
    },
  },
  "formTools": "form-tools",
}
`;

exports[`sets optional on field using custom formatter 1`] = `
Immutable.Map {
  "fields": Immutable.Map {
    "first": Immutable.Map {
      "initial": Immutable.Map {
        "type": "text",
        "optional": true,
        "label": "label formatted",
        "field": Object {
          "label": "First",
          "name": "first",
          "optional": true,
        },
        "value": "firstValue",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "firstValue",
      },
    },
    "second": Immutable.Map {
      "initial": Immutable.Map {
        "type": "boolean",
        "optional": false,
        "label": "Second",
        "field": Object {
          "label": "Second",
          "name": "second",
          "type": "boolean",
        },
        "value": "secondValue",
      },
      "current": Immutable.Map {
        "helperText": "",
        "error": false,
        "pristine": true,
        "touched": false,
        "value": "secondValue",
      },
    },
  },
  "formTools": "form-tools",
}
`;

exports[`sets optional on field using custom formatter 2`] = `
Array [
  "First",
  "first",
]
`;

exports[`throws error if name not provided 1`] = `"name is required on field"`;
